--- a/style.css
+++ b/style.css
@@ -422,7 +422,19 @@ p {
   .welcome-heading {
     font-size: 32px;
   }
+  .game-logo {
+    top: 14px;
+    left: 14px;
+  }
   
+  .game-logo img {
+    width: 20px;
+    height: 20px;
+  }
+  
+  .game-logo span {
+    font-size: 14px;
+  }
   .instructions {
     font-size: 16px;
   }
